--- a/web/pom.xml
+++ b/web/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
+			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -56,6 +56,12 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+			<version>4.3.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
 			<version>4.3.5</version>
 			<scope>provided</scope>
 		</dependency>
@@ -94,7 +100,7 @@
 			<artifactId>commons-net</artifactId>
 			<version>3.3</version>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -110,13 +116,13 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.2.3.v20140905</version>
+			<version>9.2.5.v20141112</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-webapp</artifactId>
-			<version>9.2.3.v20140905</version>
+			<version>9.2.5.v20141112</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
@@ -145,7 +151,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<profiles>
 		<profile>
 			<id>release</id>
@@ -165,7 +171,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>2.3</version> 
+						<version>2.3</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
@@ -179,7 +185,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version> 
+						<version>2.9.1</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
@@ -192,7 +198,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version> 
+						<version>1.5</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
