--- a/core/pom.xml
+++ b/core/pom.xml
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>1.0.16</version>
+			<version>1.0.17</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -135,6 +135,7 @@
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>3.7</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
@@ -277,7 +278,7 @@
 		<dependency>
 			<groupId>org.apache.mina</groupId>
 			<artifactId>mina-core</artifactId>
-			<version>2.0.12</version>
+			<version>2.0.13</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
