--- a/web/pom.xml
+++ b/web/pom.xml
@@ -105,16 +105,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.16</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.1.5</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.1.5</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.tuckey</groupId>
