--- a/web/pom.xml
+++ b/web/pom.xml
@@ -40,12 +40,12 @@
 			<artifactId>javaee-api</artifactId>
 			<version>7.0</version>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>core</artifactId>
-			<version>2.0</version> 
-		</dependency>    
+			<artifactId>common</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
