--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -43,7 +43,8 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>1.0.22</version> 
+			<version>1.0.23</version> 
+			<scope>provided</scope>
 		</dependency>  
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -61,6 +62,7 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.2.1.Final</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
