--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.weicoder</groupId>
 	<artifactId>core</artifactId>
 	<packaging>jar</packaging>
-	<version>2.1</version>
+	<version>2.2</version>
 	<name>weicoder</name>
 	<description>java core tools</description>
 	<url>https://github.com/wdcode/weicoder</url>
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
-			<version>2.1</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.14</version>
+			<version>1.2.15</version>
 			<scope>provided</scope>
 		</dependency> 
 		<dependency>
@@ -58,6 +58,11 @@
 			<version>2.2.3</version>
 			<scope>provided</scope>
 		</dependency> 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.2.Final</version> 
+		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
