--- a/core/pom.xml
+++ b/core/pom.xml
@@ -47,6 +47,12 @@
 			<scope>provided</scope>
 		</dependency> 
 		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.6.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.16</version>
@@ -57,12 +63,7 @@
 			<artifactId>quartz</artifactId>
 			<version>2.2.3</version>
 			<scope>provided</scope>
-		</dependency> 
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.2.2.Final</version> 
-		</dependency>
+		</dependency>  
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
