--- a/frame/pom.xml
+++ b/frame/pom.xml
@@ -47,21 +47,41 @@
 			<version>2.3</version> 
 		</dependency> 
 		<dependency>
-			<groupId>com.weicoder</groupId>
-			<artifactId>web</artifactId>
-			<version>2.3</version> 
-		</dependency> 
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.5.14.1</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
-			<groupId>com.weicoder</groupId>
-			<artifactId>dao</artifactId>
-			<version>2.3</version> 
-		</dependency>  
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>5.0.2.RELEASE</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>5.0.2.RELEASE</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-search</artifactId>
 			<version>5.8.2.Final</version>
 			<scope>provided</scope> 
-		</dependency> 
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.3.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.6</version>  
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -122,7 +142,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>3.0.0</version> 
+						<version>2.10.4</version> 
 						<executions>
 							<execution>
 								<phase>package</phase>
