--- a/frame/pom.xml
+++ b/frame/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.weicoder</groupId>
 	<artifactId>frame</artifactId>
 	<packaging>jar</packaging>
-	<version>2.3</version>
+	<version>2.3.1</version>
 	<name>weicoder</name>
 	<description>java frame</description>
 	<url>https://github.com/wdcode/weicoder</url>
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>core</artifactId>
-			<version>2.3</version> 
+			<version>2.3.1</version> 
 		</dependency> 
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -63,6 +63,11 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>5.0.3.RELEASE</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.13.Final</version> 
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
