--- a/nosql/pom.xml
+++ b/nosql/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>com.whalin</groupId>
 			<artifactId>Memcached-Java-Client</artifactId>
-			<version>3.0.2</version>
+			<version>3.0.2-weicoder</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
