--- a/frame/pom.xml
+++ b/frame/pom.xml
@@ -45,6 +45,7 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>core</artifactId>
 			<version>2.3.2</version> 
+			<scope>provided</scope> 
 		</dependency> 
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -68,6 +69,7 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.2.13.Final</version> 
+			<scope>provided</scope> 
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
