--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.weicoder</groupId>
 	<artifactId>common</artifactId>
 	<packaging>jar</packaging>
-	<version>2.3.2.1</version>
+	<version>2.3.3-SNAPSHOT</version>
 	<name>weicoder</name>
 	<description>java tools</description>
 	<url>https://github.com/wdcode/weicoder</url>
