--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.weicoder</groupId>
 	<artifactId>core</artifactId>
 	<packaging>jar</packaging>
-	<version>2.3.2.1</version>
+	<version>2.3.3-SNAPSHOT</version>
 	<name>weicoder</name>
 	<description>java core tools</description>
 	<url>https://github.com/wdcode/weicoder</url>
@@ -133,7 +133,7 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
-			<version>2.3.2.1</version>
+			<version>2.3.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
