--- a/frame/pom.xml
+++ b/frame/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.weicoder</groupId>
 	<artifactId>frame</artifactId>
 	<packaging>jar</packaging>
-	<version>2.3.2.1</version>
+	<version>2.3.3-SNAPSHOT</version>
 	<name>weicoder</name>
 	<description>java frame</description>
 	<url>https://github.com/wdcode/weicoder</url>
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>core</artifactId>
-			<version>2.3.2.1</version> 
+			<version>2.3.3-SNAPSHOT</version> 
 			<scope>provided</scope> 
 		</dependency> 
 		<dependency>
