--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -159,6 +159,46 @@
 							<encoding>UTF-8</encoding>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>weicoder</id>
+			<distributionManagement>
+				<snapshotRepository>
+					<id>weicoder</id>
+					<url>http://47.88.228.35:8081/repository/maven-snapshots/</url>
+				</snapshotRepository>
+				<repository>
+					<id>weicoder</id>
+					<url>http://47.88.228.35:8081/repository/maven-central/</url>
+				</repository>
+			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.7.0</version>
+						<configuration>
+							<source>1.8</source>
+							<target>1.8</target>
+							<encoding>UTF-8</encoding>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
