--- a/outdated/pom.xml
+++ b/outdated/pom.xml
@@ -43,13 +43,13 @@
 		<dependency>
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom2</artifactId>
-			<version>2.0.6-weicoder</version>
+			<version>2.0.6</version>
 			<scope>provided</scope>
 		</dependency>  
 		<dependency>
 			<groupId>com.whalin</groupId>
 			<artifactId>Memcached-Java-Client</artifactId>
-			<version>3.0.2-weicoder</version>
+			<version>3.0.2</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -73,7 +73,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
-			<version>1.5-weicoder</version>
+			<version>1.5</version>
 			<scope>provided</scope>
 		</dependency> 
 	</dependencies>
