--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.3.3-SNAPSHOT</version>
+		<version>2.3.3</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
