--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.weicoder</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.3.3-SNAPSHOT</version>
+	<version>2.3.3</version>
 	<packaging>pom</packaging>
 
 	<modules>
