--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,7 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<parent.version>2.3.3-SNAPSHOT</parent.version>
+		<parent.version>2.3.3</parent.version>
 	</properties>
 
 	<licenses>
