--- a/outdated/pom.xml
+++ b/outdated/pom.xml
@@ -4,9 +4,9 @@
 	<groupId>com.weicoder</groupId>
 	<artifactId>outdated</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>2.3.4</version>
 	<name>weicoder</name>
-	<description>java core tools</description>
+	<description>java outdated</description>
 	<url>https://github.com/wdcode/weicoder</url>
 
 	<licenses>
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
-			<version>2.3.2.1</version>
+			<version>2.3.4</version>
 		</dependency> 
 		<dependency>
 			<groupId>org.jdom</groupId>
