--- a/nosql/pom.xml
+++ b/nosql/pom.xml
@@ -17,7 +17,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>common</artifactId>
+			<artifactId>core</artifactId>
 		</dependency> 
 		<dependency>
 			<groupId>org.mongodb</groupId>
