--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -275,7 +275,7 @@
 				<groupId>io.netty</groupId>
 				<artifactId>netty-all</artifactId>
 				<version>4.1.26.Final</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.mongodb</groupId>
 				<artifactId>mongo-java-driver</artifactId>
@@ -299,6 +299,11 @@
 				<artifactId>kafka-clients</artifactId>
 				<version>1.1.0</version>
 				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>25.1-jre</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
