--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>com.weicoder</groupId>
-		<artifactId>parent</artifactId>
-		<version>3.0.3</version>
-		<relativePath>../parent/pom.xml</relativePath>
+		<artifactId>weicoder</artifactId> 
+		<version>3.0.4</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>common</artifactId>
